--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,15 @@
 version: "3.3"
 
 services:
+  backend:
+    build:
+      context: .
+      dockerfile: ./Dockerfile-golang
+    ports:
+      - 4000:4000
+    volumes:
+      - ./backend-app:/app
+
   frontend:
     build:
       context: .
