--- a/go-movies/package.json
+++ b/go-movies/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
