--- a/go-movies/package.json
+++ b/go-movies/package.json
@@ -13,8 +13,10 @@
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -44,6 +46,8 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/redux": "^3.6.0"
   }
 }
